added auth code

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
   <!-- link css -->
   <link rel="stylesheet" href="styles/index.css">
+  <script src="scripts/index.js"></script>
   <meta charset="utf-8">
   <script src="https://www.gstatic.com/firebasejs/6.4.0/firebase-app.js"></script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
