connected chat room

--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
             alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRT1hX2JSV5J-FBZTp-3wjhuqD7zpm8ZbKs56lzyzjjjZwKUeSQ">
         </div>
         <div class="col s12 l6 offset-l1">
-          <h2 class="indigo-text text-darken-4">Chat</h2>
+          <h2 class="indigo-text text-darken-4" onclick="redirect('chat')">Chat</h2>
           <p>you are able to contact with others</p>
         </div>
       </div>
