--- a/public/chat.html
+++ b/public/chat.html
@@ -88,15 +88,11 @@
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
         <!-- Header section containing logo -->
-        <header class="mdl-layout__header mdl-color-text--white mdl-color--pink-700">
+        <header class="mdl-layout__header mdl-color-text--white mdl-color--brown-700">
             <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
                 <div
                     class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
                     <h3></i>Chat the Tea</h3>
-                </div>
-                <div id="user-container">
-                    <div hidden id="user-pic"></div>
-                    <div hidden id="user-name"></div>
                 </div>
             </div>
         </header>
