--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,45 @@
       </form>
     </div>
   </div>
+
+  <div id="homePage">
+    <h1>Ronald Reagan Remembers</h1>
+    <div id="homePageBtn">
+      <button id="loginBtn2" class="btn pink lighten-2 waves-effect waves-light ">Login</button>
+      <button id="signUpPopup2" class="btn pink lighten-2 waves-effect waves-light ">Sign Up</button>
+    </div>
+  </div>
+
+  <footer class="page-footer grey darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 l6">
+          <h5>About Me</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec,
+            tincidunt orci.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec,
+            tincidunt orci.</p>
+
+        </div>
+        <div class="col s12 l4offset-l2">
+          <h5>Connect</h5>
+          <ul>
+            <li class=""><a href="#" class="grey-text text-lighten-3">Facebook</a></li>
+            <li> <a href="#" class="grey-text text-lighten-3">Twitter</a></li>
+            <li> <a href="#" class="grey-text text-lighten-3">Linked In</a></li>
+            <li> <a href="#" class="grey-text text-lighten-3">Instagram</a></li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright grey darken-4">
+      <div class="container center-align">&copy;2019 Photo Jream
+
+      </div>
+
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
