made button types button

--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,9 @@
           <label for="password">Your password</label>
         </div>
         <div class="input-field">
-          <button id="submitBtn" class="btn pink lighten-2 waves-effect waves-light ">Submit</button>
-          <button id="signUpPopup" class="btn pink lighten-2 waves-effect waves-light ">Don't have an account?</button>
+          <button type="button" id="submitBtn" class="btn pink lighten-2 waves-effect waves-light ">Submit</button>
+          <button type="button" id="signUpPopup" class="btn pink lighten-2 waves-effect waves-light ">Don't have an
+            account?</button>
         </div>
       </form>
     </div>
@@ -114,7 +115,8 @@
             <option value="4">pro</option>
           </select>
           <div id="createButton" class="input-field">
-            <button id="createAccBtn" class="btn pink lighten-2 waves-effect waves-light center-align">Create Your
+            <button type="button" id="createAccBtn"
+              class="btn pink lighten-2 waves-effect waves-light center-align">Create Your
               Account</button>
           </div>
           <div class="center-align">
